--- a/package.json
+++ b/package.json
@@ -5,20 +5,15 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
     "firebase": "^10.7.1",
-    "next": "latest",
+    "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
-  },
-  "devDependencies": {
-    "eslint": "^8",
-    "eslint-config-next": "latest"
   }
 }
