--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "firebase": "^10.7.1",
+    "firebase": "9.23.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
